--- a/edit.css
+++ b/edit.css
@@ -471,7 +471,7 @@ progress::-webkit-progress-bar{
         top: unset;
         height: 75px;
         height: 84px;
-    
+        background-color: #212226;
     }
 
     nav ul a {
